Archive2/17/a4986a939fe914/output
main.cpp:35:3: error: no matching function for call to 'call'
  detail::call_or::call(a, b);
  ^~~~~~~~~~~~~~~~~~~~~
main.cpp:17:15: note: candidate template ignored: substitution failure [with A = detail::Alice, B = detail::Bob]: call to function 'operator|' that is neither visible in the template definition nor found by argument-dependent lookup
  static auto call(const A& a, const B& b)
              ^
1 error generated.
